# stickyNotes

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: index.html  note.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  window.rs
src/js/: manager.js  note.js  settings.js
src/styles/: global.css  note.css  settings.css
